ProductPage: Resolve FRO-10 🥳.
This also comes with a slight restructure to the prismic slices and a
bunch of work on unrelated components/things that really shouldn't be in
this commit but they are because of time constraints. So let's just
cut me some slack this time :^)

--- a/apps/web/src/components/typography/heading.module.scss
+++ b/apps/web/src/components/typography/heading.module.scss
@@ -1,19 +1,33 @@
 .title {
-    font-size: 3.25rem;
-    line-height: 1.2;
-    font-weight: 400;
+    font-size: 2.5rem;
+    line-height: normal;
+    font-weight: 600;
 
     &.bold {
+        font-size: 3.25rem;
+        line-height: 1.2;
         font-weight: 700;
         color: var(--accent-primary);
     }
 }
 .subtitle {
-    font-size: 2.5rem;
-    line-height: 1;
-    font-weight: 700;
+    font-size: 1.75rem;
+    line-height: 1.15;
+    font-weight: 400;
 
     &.bold {
+        font-size: 2.5rem;
+        line-height: 1;
         font-weight: 500;
+    }
+}
+
+.title,
+.subtitle {
+    &:is(:hover, :focus, :focus-within) a {
+        text-decoration: underline;
+        text-decoration-style: dotted;
+        text-decoration-thickness: 0.2rem;
+        color: var(--accent-primary);
     }
 }
