--- a/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
+++ b/apps/web/src/app/(store)/[locale]/products/[handle]/page.module.scss
@@ -12,7 +12,7 @@
         gap: var(--block-spacer-huge);
     }
 
-    .prismicDivider {
+    .contentDivider {
         width: 90%;
         height: var(--block-border-width-small);
         margin: var(--block-spacer) 5%;
