--- a/apps/web/src/components/Header/header-navigation.module.scss
+++ b/apps/web/src/components/Header/header-navigation.module.scss
@@ -9,7 +9,6 @@
     height: 100%;
     font-weight: 500;
     font-size: 1.75rem;
-    line-height: 1;
     color: var(--color-dark);
 
     @media (max-width: $breakpoint-tablet-medium) {
@@ -19,12 +18,9 @@
     a {
         cursor: pointer;
 
-        @media (hover: hover) and (pointer: fine) {
-            &:hover,
-            &:active,
-            &.active {
-                color: var(--accent-primary);
-            }
+        &:is(:hover, :active, :focus, :focus-within, .active),
+        &:hover {
+            color: var(--accent-primary);
         }
     }
 
@@ -38,10 +34,35 @@
 
         svg {
             display: inline-block;
-            height: 2rem;
-            font-size: 1.25rem;
-            line-height: 1;
+            height: 100%;
+            margin-bottom: -0.25rem;
+            font-size: 1.75rem;
+            stroke-width: 3;
             vertical-align: middle;
+            transform: rotate(-90deg);
+            transition: 150ms ease-in-out transform;
+        }
+
+        &:has(:is(:hover, :active, :focus, :focus-within)),
+        &:is(:hover, :active, :focus, :focus-within),
+        &:hover {
+            color: var(--accent-primary);
+
+            svg {
+                transform: rotate(0);
+            }
+
+            /* NOTE: DO NOT "@media (hover: hover) and (pointer: fine)" this one! */
+            .submenu {
+                z-index: 1;
+                max-height: 100vh;
+                border-bottom: var(--block-border-width) solid var(--accent-secondary);
+            }
+        }
+
+        // Firefox doesn't support `:is()`, so we have to do this.
+        &:hover .submenu {
+            max-height: 100vh !important;
         }
 
         a {
@@ -52,31 +73,30 @@
                 justify-content: flex-start;
                 align-items: center;
                 text-transform: uppercase;
-                gap: 0.25rem;
                 text-transform: unset;
                 white-space: nowrap;
             }
         }
 
         .submenu {
-            z-index: 9999;
+            z-index: -1;
             overflow: hidden;
             position: absolute;
-            top: 6rem;
-            left: 0;
-            right: 0;
+            inset: 5.45rem 0 auto 0;
+
             max-height: 0;
-            transition: 150ms ease-in-out;
-            border-color: var(--accent-secondary);
+            transition:
+                350ms ease-in-out max-height,
+                350ms ease-in-out height,
+                350ms ease-in-out border;
+            // Make the hit-box larger, could've been a padding but it obscures the logo
+            // e.g., let's not `padding-top: 0.75rem;`.
+            border-bottom: 0 solid transparent;
             background: var(--accent-secondary-light);
             color: var(--color-dark);
             box-shadow: 0 1rem 1rem -1rem var(--color-block-shadow);
+            line-height: normal;
             cursor: unset;
-
-            /* NOTE: DO NOT "@media (hover: hover) and (pointer: fine)" this one! */
-            &:hover {
-                max-height: 100vh;
-            }
 
             .content {
                 display: grid;
@@ -97,23 +117,19 @@
 
                     .title {
                         font-weight: 500;
-                        line-height: 1.15;
+                        line-height: normal;
+                        min-height: 2rem;
                     }
                     .description {
                         font-weight: 500;
                         font-size: 1.25rem;
+                        line-height: normal;
                         text-transform: none;
                         opacity: 0.75;
                         margin-top: 0.5rem;
                     }
                 }
             }
-        }
-
-        /* NOTE: DO NOT "@media (hover: hover) and (pointer: fine)" this one! */
-        &:hover .submenu {
-            max-height: 100vh;
-            border-bottom: 0.05rem solid var(--accent-secondary);
         }
     }
 }
