--- a/apps/web/src/components/products/add-to-cart.module.scss
+++ b/apps/web/src/components/products/add-to-cart.module.scss
@@ -10,7 +10,7 @@
     width: auto;
     padding: calc(var(--block-padding-large) - var(--block-border-width))
         calc(calc(var(--block-padding-large) * 2) - var(--block-border-width));
-    line-height: normal;
+    line-height: 1;
     font-size: 2rem;
     font-weight: 500;
     text-align: center;
@@ -18,7 +18,7 @@
     user-select: none;
     border: var(--block-border-width) solid var(--accent-primary);
     border-radius: var(--block-border-radius);
-    box-shadow: 0 0 0.25rem 0 var(--color-block-shadow);
+    box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);
     background-color: var(--accent-primary);
     color: var(--accent-primary-text);
     transition:
@@ -63,7 +63,7 @@
 
     svg {
         font-size: 2rem;
-        stroke-width: 2.75;
+        stroke-width: 2.5;
         height: 100%;
     }
 
