--- a/apps/web/src/scss/currency.scss
+++ b/apps/web/src/scss/currency.scss
@@ -1,3 +1,5 @@
+// TODO: Remove this is legacy code.
+
 .Currency {
     position: relative;
 
@@ -22,6 +24,6 @@
     }
 
     &.Currency-Discount {
-        color: $color-sale;
+        color: var(--color-sale);
     }
 }
