--- a/apps/web/src/components/Header/header.module.scss
+++ b/apps/web/src/components/Header/header.module.scss
@@ -16,7 +16,8 @@
     }
 }
 
-[data-scrolled='true'] {
+[data-scrolled='true'],
+[data-menu-open='true'] {
     .container {
         border-bottom-color: var(--accent-secondary);
         box-shadow: 0 1rem 1rem -0.75rem var(--color-block-shadow);
@@ -25,21 +26,28 @@
 
 .content {
     display: grid;
-    grid-template-columns: auto 11.25rem 1fr;
+    grid-template-columns: 1fr auto 1fr;
     gap: var(--block-spacer);
     max-width: var(--page-width);
     width: 100%;
     height: 100%;
-    padding: var(--block-padding) var(--block-spacer-large);
+    padding: var(--block-padding);
     margin: 0 auto;
     user-select: none;
+
+    @media (min-width: $breakpoint-tablet-medium) {
+        padding: var(--block-padding) var(--block-spacer-large);
+        grid-template-columns: 10rem 1fr auto;
+        gap: var(--block-spacer-large);
+    }
 
     .logo {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 4.5rem;
-        padding: 0.5rem 0.25rem;
+        height: 5rem;
+        width: 100%;
+        padding: var(--block-padding-small) var(--block-padding);
         background: var(--accent-primary);
         border-radius: var(--block-border-radius);
         user-select: none;
@@ -87,16 +95,15 @@
         }
     }
 
-    @media (min-width: $breakpoint-tablet-medium) {
-        grid-template-columns: 10rem 1fr auto;
-        gap: var(--block-spacer-large);
-    }
-
     .actions {
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        gap: calc(var(--block-spacer) * 2);
+        gap: 0;
+
+        @media (min-width: $breakpoint-tablet-medium) {
+            gap: calc(var(--block-spacer) * 2);
+        }
 
         .SearchBar {
             max-width: 24rem;
@@ -113,9 +120,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            text-align: center;
             height: 100%;
+            padding: 0 0.75rem;
+            aspect-ratio: 1 / 1;
 
-            border-radius: var(--block-border-radius);
             color: var(--accent-secondary-text);
             cursor: pointer;
             transition: 150ms all ease-in-out;
@@ -124,8 +133,13 @@
             line-height: 1.25rem;
             font-size: 1.25rem;
 
+            @media (min-width: $breakpoint-tablet-medium) {
+                aspect-ratio: unset;
+            }
+
             svg {
                 font-size: 2.5rem;
+                stroke-width: 2.25;
             }
 
             &:empty {
@@ -142,6 +156,7 @@
                 padding: 0 var(--block-padding);
                 color: var(--accent-secondary-light);
                 background: var(--accent-primary);
+                border-radius: var(--block-border-radius);
 
                 @media (hover: hover) and (pointer: fine) {
                     &:hover {
