--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -1,3 +1,4 @@
+@import 'variables.scss';
 // Components
 // @import '../components/Currency/Currency.scss';
 @import 'carousel.scss';
@@ -8,13 +9,13 @@ body {
     max-width: 100vw;
     padding: 0;
     margin: 0;
-    font-size: 11px;
+    font-size: 0.65rem;
     font-family: var(--font-primary);
     color: var(--color-dark);
     background: var(--color-bright);
 
     @media screen and (max-width: 950px) {
-        font-size: 10px;
+        font-size: 0.55rem;
     }
 
     // Touch actions
@@ -26,15 +27,18 @@ body {
     -webkit-font-smoothing: subpixel-antialiased;
     font-smooth: always;
     text-rendering: optimizeLegibility;
-    text-size-adjust: none;
+    text-size-adjust: auto;
+    font-size-adjust: ex-height ch-width from-font;
 }
 
 :root {
     --accent-primary-dark: color-mix(in srgb, var(--accent-primary) 65%, var(--color-dark));
     --accent-primary-light: color-mix(in srgb, var(--accent-primary) 85%, var(--color-bright));
 
-    --accent-secondary-dark: color-mix(in srgb, var(--accent-secondary) 75%, var(--color-dark));
-    --accent-secondary-light: color-mix(in srgb, var(--accent-secondary) 40%, var(--color-bright));
+    --accent-secondary-dark: color-mix(in srgb, var(--accent-secondary) 95%, var(--color-dark));
+    --accent-secondary-light: color-mix(in srgb, var(--accent-secondary) 55%, var(--color-bright));
+
+    --text-test: #123;
 
     --accent-primary-text: #ececec;
     --accent-secondary-text: #101418;
@@ -88,18 +92,33 @@ body {
     --block-spacer-huge: 2rem;
 
     @media (max-width: 950px) {
-        --component-product-card-width: 21.75rem;
-
         --block-border-width: 0.3rem;
 
         --block-padding: 1rem;
-        --block-padding-small: 0.5rem;
+        --block-padding-small: 0.6rem;
         --block-padding-large: 1.5rem;
 
         --block-spacer: 0.75rem;
         --block-spacer-small: 0.5rem;
         --block-spacer-large: 1rem;
+
+        --component-product-card-width: min(21.75rem, calc(calc(50vw) - var(--block-padding-large) * 2.25));
     }
+}
+
+/* Hack to try and improve image rendering */
+img {
+    backface-visibility: hidden;
+    // Firefox
+    image-rendering: -moz-crisp-edges;
+    // Opera
+    image-rendering: -o-crisp-edges;
+    // Webkit (non-standard naming)
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    // IE (non-standard property)
+    -ms-interpolation-mode: nearest-neighbor;
+    //transform: translateZ(0);
 }
 
 input[type='number'] {
@@ -111,10 +130,12 @@ input[type='number'] {
     }
 }
 
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
+input[type='search']:is(
+        ::-webkit-search-decoration,
+        ::-webkit-search-cancel-button,
+        ::-webkit-search-results-button,
+        ::-webkit-search-results-decoration
+    ) {
     -webkit-appearance: none;
 }
 
@@ -124,4 +145,17 @@ input[type='search']::-webkit-search-results-decoration {
         overflow: hidden;
         overscroll-behavior: none none;
     }
+}
+
+#nprogress {
+    pointer-events: none;
+}
+#nprogress .bar {
+    background: var(--accent-primary-light);
+    position: fixed;
+    z-index: 2147483647;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: var(--block-padding-small);
 }
