--- a/apps/web/src/scss/variables.scss
+++ b/apps/web/src/scss/variables.scss
@@ -2,3 +2,5 @@ $breakpoint-mobile: 920px;
 $breakpoint-mobile-small: 720px;
 $breakpoint-tablet: 1024px;
 $breakpoint-tablet-medium: 1224px;
+
+$page-width: 1465px;
