--- a/apps/web/src/app/(admin)/admin/page.module.scss
+++ b/apps/web/src/app/(admin)/admin/page.module.scss
@@ -16,12 +16,16 @@
         display: flex;
         flex-direction: column;
         gap: 0.25rem;
-        padding: var(--layout-section-spacing) 0;
+        padding-top: calc(var(--layout-section-spacing) * 4);
+        padding-bottom: calc(var(--layout-section-spacing) * 2);
         width: 52rem;
         max-width: 100%;
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
+        gap: var(--layout-section-padding);
         width: 52rem;
         max-width: 100%;
     }
