--- a/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/products/[handle]/page.module.scss
+++ b/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/products/[handle]/page.module.scss
@@ -10,6 +10,7 @@
         display: flex;
         flex-direction: column;
         gap: var(--block-spacer-huge);
+        height: 100%;
     }
 
     .contentDivider {
