--- a/apps/web/src/components/products/quantity-selector.module.scss
+++ b/apps/web/src/components/products/quantity-selector.module.scss
@@ -22,6 +22,7 @@
         align-items: center;
         appearance: none;
         height: 100%;
+        min-height: calc(4rem - var(--block-border-width) * 2);
         font-size: 1.75rem;
         font-variant: common-ligatures tabular-nums slashed-zero;
         text-align: center;
