--- a/apps/web/src/components/Header/header-navigation.module.scss
+++ b/apps/web/src/components/Header/header-navigation.module.scss
@@ -20,7 +20,7 @@
         }
     }
 
-    @media (max-width: $breakpoint-tablet) {
+    @media (max-width: $breakpoint-tablet-medium) {
         display: none;
     }
 
