--- a/apps/web/src/components/products/add-to-cart.module.scss
+++ b/apps/web/src/components/products/add-to-cart.module.scss
@@ -8,16 +8,16 @@
     align-items: center;
     gap: var(--block-spacer);
     width: auto;
+    min-height: 6rem;
     padding: calc(var(--block-padding-large) - var(--block-border-width))
         calc(calc(var(--block-padding-large) * 2) - var(--block-border-width));
-    line-height: 1;
+    line-height: normal;
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 600;
     text-align: center;
-    text-transform: uppercase;
     user-select: none;
     border: var(--block-border-width) solid var(--accent-primary);
-    border-radius: var(--block-border-radius);
+    border-radius: var(--block-border-radius-large);
     box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);
     background-color: var(--accent-primary);
     color: var(--accent-primary-text);
