Components: Refactor `CollectionBlock` to use `react-window`.

--- a/apps/web/src/components/Header/hamburger-menu.module.scss
+++ b/apps/web/src/components/Header/hamburger-menu.module.scss
@@ -21,6 +21,7 @@
         font-size: 3rem;
         line-height: 3rem;
         transform: scaleX(-1);
+        vertical-align: middle;
     }
 
     @media (min-width: $breakpoint-tablet-medium) {
