--- a/apps/web/src/components/Header/header.module.scss
+++ b/apps/web/src/components/Header/header.module.scss
@@ -165,7 +165,7 @@
 
             svg {
                 font-size: inherit;
-                stroke-width: 2.25;
+                vertical-align: middle;
             }
 
             &:empty {
