--- a/apps/web/src/components/products/quantity-selector.module.scss
+++ b/apps/web/src/components/products/quantity-selector.module.scss
@@ -40,6 +40,7 @@
         svg {
             font-size: 2rem;
             stroke-width: 2.25;
+            vertical-align: middle;
         }
 
         &:is(:not(:disabled)) {
