--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -1,13 +1,11 @@
 @import '@/styles/variables.scss';
 
 .container {
-    --product-card-color-background: var(--color-bright);
-    --product-card-color-image-background: var(--color-block);
-
     position: relative;
     width: 100%;
     height: 100%;
     min-width: 100%;
+    min-height: 36.5rem;
 
     .content {
         display: grid;
@@ -18,8 +16,8 @@
         column-count: 2;
         column-gap: var(--block-spacer-large);
         gap: var(--block-spacer-large);
-        scroll-snap-type: x mandatory;
-        scroll-behavior: smooth;
+        //scroll-snap-type: x mandatory;
+        //scroll-behavior: smooth;
 
         @media (min-width: $breakpoint-mobile) {
             justify-content: start;
@@ -28,7 +26,15 @@
         }
     }
 
+    &.skeleton {
+        --product-card-color-background: var(--color-bright);
+        --product-card-color-image-background: var(--color-block);
+    }
+
     &.horizontal {
+        margin: 0 calc(var(--block-padding-large) * -1);
+        width: calc(100% + var(--block-padding-large) * 2);
+
         .content {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
@@ -36,11 +42,9 @@
             grid-auto-flow: column;
             columns: none;
             overflow-x: auto;
-            padding: var(--block-padding-large) 0;
-            padding-right: var(--block-spacer);
-            margin: calc(var(--block-padding-large) * -1) 0;
+            padding: var(--block-padding-large);
 
-            scroll-padding-left: var(--block-padding-large);
+            //scroll-padding-left: var(--block-padding-large);
             touch-action: pan-x pan-y;
             overscroll-behavior: auto auto;
         }
@@ -51,5 +55,46 @@
                 overflow-x: hidden;
             }
         }
+    }
+}
+
+.viewAll {
+    position: relative;
+    flex: 1 auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: var(--component-product-card-width);
+    height: 100%;
+    padding: var(--block-padding) var(--block-padding-large);
+    scroll-snap-align: center;
+    border-radius: var(--block-border-radius);
+    background: var(--accent-secondary);
+    color: var(--accent-primary-dark);
+    border: calc(var(--block-border-width) * 1.5) solid var(--accent-secondary);
+    transition:
+        150ms ease-in-out color,
+        150ms ease-in-out background-color,
+        150ms ease-in-out border;
+
+    line-height: normal;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: underline 0.2rem dotted;
+    text-underline-offset: var(--block-border-width);
+
+    margin-right: calc(50vw - calc(var(--component-product-card-width) / 2 + calc(var(--block-spacer) * 2)));
+
+    @media (min-width: $breakpoint-mobile) {
+        margin-right: calc(($page-width / 2) + calc(var(--component-product-card-width) / 2));
+    }
+
+    &:is(:hover, :active, :focus, :focus-within) {
+        background: var(--accent-primary);
+        color: var(--accent-primary-text);
+        border-color: var(--accent-primary-dark);
     }
 }
