--- a/apps/web/src/components/products/product-actions-container.module.scss
+++ b/apps/web/src/components/products/product-actions-container.module.scss
@@ -6,7 +6,7 @@
     .options {
         display: flex;
         flex-direction: column;
-        gap: var(--block-spacer-large);
+        gap: var(--block-spacer);
         height: 100%;
 
         @media (min-width: $breakpoint-mobile) {
@@ -20,7 +20,7 @@
         .productOptions {
             display: flex;
             flex-direction: column;
-            gap: var(--block-spacer-large);
+            gap: var(--block-spacer);
 
             @media (min-width: $breakpoint-mobile) {
                 gap: calc(var(--block-spacer-small) / 2) var(--block-spacer-large);
