--- a/apps/web/src/components/products/quantity-selector.module.scss
+++ b/apps/web/src/components/products/quantity-selector.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/variables.scss';
+
 .container {
     overflow: hidden;
     display: flex;
@@ -10,6 +12,10 @@
     text-transform: uppercase;
     font-weight: 600;
     user-select: none;
+
+    @media (max-width: $breakpoint-mobile) {
+        margin-bottom: var(--block-spacer-large);
+    }
 
     &:is(:hover, :focus, :focus-within, :has(input:active, input:focus)):not(:disabled) {
         border-color: var(--color-block-dark);
@@ -36,28 +42,31 @@
         height: 100%;
         aspect-ratio: 1.1 / 1;
         line-height: 1;
+        font-weight: 400;
+        font-size: 2.5rem;
 
-        svg {
+        @media (min-width: $breakpoint-mobile) {
             font-size: 2rem;
-            stroke-width: 2.25;
-            vertical-align: middle;
         }
 
         &:is(:not(:disabled)) {
             cursor: pointer;
         }
 
-        &:active:not(:disabled) {
+        &:is(:active):not(:disabled) {
             transition: 50ms ease-in-out background-color;
             color: var(--accent-primary-text);
             background-color: var(--accent-primary-light);
         }
 
-        &:hover:not(:disabled) {
-            background-color: var(--color-block);
-        }
         &:disabled {
             color: var(--color-block);
+        }
+
+        @media (pointer: fine) {
+            &:is(:hover):not(:disabled, :active) {
+                background-color: var(--color-block);
+            }
         }
     }
 
