BlogPage: Implement the blog page (resolves FRO-16).
A whole bunch of other things also got completed that should've probably
been in their own PR but we're behind, so let's move as fast as possible
for now.

--- a/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
+++ b/apps/web/src/components/HeaderNavigation/mobile-menu.module.scss
@@ -6,6 +6,7 @@
     z-index: 0;
     width: 85vw;
     height: calc(100vh - 6rem);
+    height: calc(100dvh - 6rem);
     background: var(--accent-secondary-light);
     border-right: var(--block-border-width) solid var(--accent-secondary-dark);
     color: var(--color-dark);
