--- a/apps/web/src/scss/app.scss
+++ b/apps/web/src/scss/app.scss
@@ -16,6 +16,7 @@
 
     --color-bright: #fefefe;
     --color-dark: #101418;
+    --color-dark-secondary: #555555;
 
     --color-sale: #b51200;
 
@@ -49,7 +50,18 @@ body {
     padding: 0;
     margin: 0;
     font-size: 0.65rem;
-    font-family: var(--font-primary);
+    font-family:
+        var(--font-primary, system-ui),
+        -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        'Open Sans',
+        'Helvetica Neue',
+        sans-serif;
     color: var(--color-dark);
     background: var(--color-bright);
 
@@ -109,6 +121,15 @@ body {
 
             --component-product-card-width: min(21.75rem, calc(calc(50vw) - var(--block-padding-large) * 2.25));
         }
+    }
+}
+
+a:not(:disabled) {
+    cursor: pointer;
+    transition: 150ms ease-in-out color;
+
+    &:is(:hover, :active, :focus) {
+        color: var(--accent-primary);
     }
 }
 
