--- a/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/blog/blog-content.module.scss
+++ b/apps/web/src/app/(storefront)/storefront/[domain]/[locale]/blog/blog-content.module.scss
@@ -18,41 +18,77 @@
         position: relative;
         display: grid;
         grid-template-rows: auto auto 1fr auto;
-        padding: var(--block-padding-large);
-        background: var(--article-background);
-        border: var(--block-border-width) solid var(--article-border);
-        border-radius: var(--block-border-radius);
+        margin-bottom: var(--block-spacer);
+
+        @media (min-width: $breakpoint-mobile) {
+            display: grid;
+            grid-template-rows: auto auto 1fr auto;
+            padding: var(--block-padding-large);
+            margin: 0;
+            background: var(--article-background);
+            border: var(--block-border-width) solid var(--article-border);
+            border-radius: var(--block-border-radius);
+        }
 
         .date {
             font-weight: 500;
-            font-size: 1.5rem;
+            font-size: 1.75rem;
             line-height: 1.2;
             text-transform: uppercase;
             color: var(--color-block-black);
+
+            @media (min-width: $breakpoint-mobile) {
+                font-size: 1.5rem;
+            }
         }
         .title {
             font-weight: 700;
-            font-size: 2rem;
-            line-height: 1;
-            margin: var(--block-spacer-small) 3.5rem var(--block-spacer) 0;
+            font-size: 2.5rem;
+            line-height: normal;
+            margin: var(--block-spacer-small) 0 var(--block-spacer) 0;
+
+            @media (min-width: $breakpoint-mobile) {
+                margin: calc(var(--block-spacer-small) / 2) 3.5rem var(--block-spacer) 0;
+                font-size: 2rem;
+                line-height: 1;
+            }
         }
         .excerpt {
-            font-size: 1.5rem;
-            font-weight: 400 !important;
+            font-size: 1.75rem;
+            font-weight: 400;
+            line-height: normal;
+
+            @media (min-width: $breakpoint-mobile) {
+                font-size: 1.5rem;
+                line-height: 1.2;
+            }
         }
         .actions {
-            margin-top: var(--block-spacer);
+            margin-top: var(--block-spacer-large);
+
+            @media (max-width: $breakpoint-mobile) {
+                margin-top: var(--block-spacer);
+            }
 
             .action {
                 width: 100%;
+                height: 4.5rem;
                 border-radius: var(--block-border-radius);
                 text-transform: capitalize;
+
+                @media (max-width: $breakpoint-mobile) {
+                    display: none;
+                }
             }
         }
 
         .authors {
             position: absolute;
             inset: var(--block-padding) var(--block-padding) auto auto;
+
+            @media (max-width: $breakpoint-mobile) {
+                display: none;
+            }
 
             .author {
                 overflow: hidden;
