--- a/apps/web/src/components/Header/cart-button.module.scss
+++ b/apps/web/src/components/Header/cart-button.module.scss
@@ -5,8 +5,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    max-height: 3.5rem;
-    padding: var(--block-padding-small) 0;
+    max-height: 4rem;
+    padding: var(--block-padding) 0;
     font-size: 3rem;
     font-weight: 400;
     line-height: 1;
@@ -30,20 +30,23 @@
         color: var(--accent-primary);
     }
 
-    @media (min-width: $breakpoint-tablet-medium) {
+    @media (min-width: $breakpoint-mobile) {
+        padding: var(--block-padding-small) 0;
+        max-height: 3.5rem;
         font-size: 2.5rem;
     }
 
     &[data-items]:not([data-items='0']) {
         gap: var(--block-padding);
-        padding: var(--block-padding-small) var(--block-padding);
+        padding: var(--block-padding-small) var(--block-padding-large);
         background-color: var(--accent-primary);
         color: var(--accent-primary-text);
         border-radius: 5rem;
-        font-size: 2.65rem;
+        font-size: 2.5rem;
 
-        @media (min-width: $breakpoint-tablet-medium) {
+        @media (min-width: $breakpoint-mobile) {
             font-size: 2.15rem;
+            padding: var(--block-padding-small) var(--block-padding);
         }
 
         .quantity {
