--- a/apps/web/src/components/Header/header.module.scss
+++ b/apps/web/src/components/Header/header.module.scss
@@ -149,7 +149,6 @@
             text-align: center;
             height: 100%;
             padding: 0 0.75rem;
-            aspect-ratio: 1 / 1;
 
             color: var(--accent-secondary-text);
             cursor: pointer;
@@ -159,9 +158,9 @@
             font-weight: 600;
             font-size: 3rem;
 
-            @media (min-width: $breakpoint-tablet-medium) {
-                aspect-ratio: unset;
+            @media (min-width: $breakpoint-mobile) {
                 font-size: 2.5rem;
+                aspect-ratio: 1 / 1;
             }
 
             svg {
