--- a/apps/web/src/components/ProductCard/product-card.module.scss
+++ b/apps/web/src/components/ProductCard/product-card.module.scss
@@ -8,6 +8,7 @@
     grid-template-areas: 'product-image' 'product-details' 'product-actions';
     gap: var(--block-spacer);
     height: 100%;
+    min-height: 21.1rem;
     padding: calc(var(--block-padding) - var(--block-border-width));
     scroll-snap-align: center;
     background: var(--product-card-color-background);
