--- a/apps/web/src/components/products/collection-block.module.scss
+++ b/apps/web/src/components/products/collection-block.module.scss
@@ -16,8 +16,6 @@
         column-count: 2;
         column-gap: var(--block-spacer-large);
         gap: var(--block-spacer-large);
-        //scroll-snap-type: x mandatory;
-        //scroll-behavior: smooth;
 
         @media (min-width: $breakpoint-mobile) {
             justify-content: start;
@@ -36,7 +34,7 @@
         width: calc(100% + var(--block-padding-large) * 2);
 
         .content {
-            display: grid;
+            display: flex;
             grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
             grid-template-rows: 1fr;
             grid-auto-flow: column;
@@ -44,9 +42,11 @@
             overflow-x: auto;
             padding: var(--block-padding-large);
 
-            //scroll-padding-left: var(--block-padding-large);
+            scroll-padding-left: var(--block-padding-large);
             touch-action: pan-x pan-y;
             overscroll-behavior: auto auto;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
         }
 
         &.skeleton {
